fix(logging): GlobalExceptionHandler Reviewer 5관점 지적 보강 [Story-031]
Critical 4건 + Major 4건 반영:
- BusinessException.getMessage() detail의 응답 노출 차단 — 응답 message는
  ErrorCode 정적 메시지만, detail은 로그에만 (input reflection 차단).
  errorResponse() helper로 6개 핸들러 응답 빌더 단일화
- MDC.put에 try-finally + MDC.remove(errorCode) 적용 — 비-HTTP 경로(@Scheduled
  ·@Async·테스트) ThreadLocal 누수 차단. SuggestionFallbacks 패턴과 일관
- JwtAuthenticationEntryPoint를 DEBUG→INFO 격상 + MDC.put(errorCode) +
  try-finally — Spring Security 필터 단의 정상 인증 실패 경로가 Story AC
  "4xx 검증 INFO" + errorCode 회귀에 들어옴
- ErrorCode enum에 PAYLOAD_TOO_LARGE(FILE005), INTERNAL_ERROR(C500) 등록 —
  핸들러 내부 리터럴 제거. 모든 MDC errorCode 값이 enum 매칭으로 추적
- MaxUploadSizeExceededException 응답을 Map → ErrorResponse 포맷으로 통일
- UserEntity에 @ToString(onlyExplicitlyIncluded=true) + @ToString.Include
  안전 필드(id, username)만 — password·email·nickname·소셜 연관 자동 제외.
  SensitiveDataLoggingTest는 'UserEntity('로 시작 + email·nickname 비포함
  까지 검증해 회귀 차단
- GlobalExceptionHandlerTest 보강 — detail 응답 비노출 1건, 다중 violations
  분기 1건, AuthenticationException 하위 타입(InsufficientAuthentication)
  1건, 4개 핸들러 모두 finally로 MDC 정리 검증 1건 추가
- ADR011 follow-up 갱신 — enum 등록·응답 포맷 통일 완료 표기, MdcKeys 통합
  ·@WebMvcTest 통합 테스트는 별도 Story로 위임