@@ -5,6 +5,7 @@ import ch.qos.logback.classic.Logger;
 import ch.qos.logback.classic.spi.ILoggingEvent;
 import ch.qos.logback.core.read.ListAppender;
 import com.example.thirdtool.Common.Exception.ErrorCode.ErrorCode;
+import jakarta.validation.ConstraintViolation;
 import jakarta.validation.ConstraintViolationException;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
@@ -17,12 +18,15 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.mock.web.MockHttpServletRequest;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.security.authentication.BadCredentialsException;
+import org.springframework.security.authentication.InsufficientAuthenticationException;
 import org.springframework.validation.BindingResult;
+import org.springframework.validation.ObjectError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.multipart.MaxUploadSizeExceededException;
 
-import java.util.Collections;
-import java.util.Map;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.Mockito.mock;
@@ -57,15 +61,15 @@ class GlobalExceptionHandlerTest {
     }
 
     @Test
-    @DisplayName("BusinessException은 WARN 레벨 + stack trace 미포함 + MDC errorCode 주입")
-    void BusinessException은_WARN_레벨_stack_미포함_MDC_errorCode_주입() {
+    @DisplayName("BusinessException은 WARN 레벨 + stack trace 미포함 + 응답에 ErrorCode 정적 메시지만 노출")
+    void BusinessException은_WARN_레벨_stack_미포함_응답에_ErrorCode_정적_메시지만_노출() {
         BusinessException ex = new BusinessException(ErrorCode.CARD_NOT_FOUND);
 
         ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleBusiness(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(ErrorCode.CARD_NOT_FOUND.getStatus());
         assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.CARD_NOT_FOUND.getCode());
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo(ErrorCode.CARD_NOT_FOUND.getCode());
+        assertThat(response.getBody().getMessage()).isEqualTo(ErrorCode.CARD_NOT_FOUND.getMessage());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.WARN);
@@ -75,67 +79,100 @@ class GlobalExceptionHandlerTest {
     }
 
     @Test
-    @DisplayName("MethodArgumentNotValidException은 INFO 레벨 + MDC INVALID_INPUT 주입")
-    void MethodArgumentNotValidException은_INFO_레벨_MDC_INVALID_INPUT() {
+    @DisplayName("BusinessException.withDetail의 detail은 로그에만 남고 응답에는 노출되지 않는다 (input reflection 차단)")
+    void BusinessException_detail은_로그에만_남고_응답에는_노출되지_않는다() {
+        String userInput = "id=42-or-sensitive-leak";
+        BusinessException ex = BusinessException.withDetail(ErrorCode.CARD_NOT_FOUND, userInput);
+
+        ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleBusiness(ex, request);
+
+        assertThat(response.getBody().getMessage())
+                .as("응답 message는 ErrorCode 정적 메시지만")
+                .isEqualTo(ErrorCode.CARD_NOT_FOUND.getMessage())
+                .doesNotContain(userInput);
+
+        ILoggingEvent event = singleEvent();
+        assertThat(event.getFormattedMessage())
+                .as("로그에는 detail까지 포함된 ex.getMessage() 노출")
+                .contains(userInput);
+    }
+
+    @Test
+    @DisplayName("MethodArgumentNotValidException은 INFO 레벨 + 응답 INVALID_INPUT")
+    void MethodArgumentNotValidException은_INFO_레벨_응답_INVALID_INPUT() {
         MethodArgumentNotValidException ex = mock(MethodArgumentNotValidException.class);
         BindingResult bindingResult = mock(BindingResult.class);
         when(ex.getBindingResult()).thenReturn(bindingResult);
-        when(bindingResult.getAllErrors()).thenReturn(Collections.emptyList());
+        when(bindingResult.getAllErrors())
+                .thenReturn(List.of(new ObjectError("dto", "violation1"), new ObjectError("dto", "violation2")));
 
         ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleValidation(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.INVALID_INPUT.getCode());
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo(ErrorCode.INVALID_INPUT.getCode());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.INFO);
-        assertThat(event.getThrowableProxy()).isNull();
-        assertThat(event.getFormattedMessage()).contains("validation.failed");
+        assertThat(event.getFormattedMessage()).contains("validation.failed").contains("errors=2");
     }
 
     @Test
-    @DisplayName("ConstraintViolationException은 INFO 레벨 + MDC INVALID_INPUT 주입")
-    void ConstraintViolationException은_INFO_레벨_MDC_INVALID_INPUT() {
-        ConstraintViolationException ex = new ConstraintViolationException("constraint failed", Collections.emptySet());
+    @DisplayName("ConstraintViolationException은 INFO 레벨 + 다중 violations 크기 로그 포함")
+    void ConstraintViolationException은_INFO_레벨_다중_violations_크기_로그() {
+        Set<ConstraintViolation<?>> violations = new HashSet<>();
+        violations.add(mock(ConstraintViolation.class));
+        violations.add(mock(ConstraintViolation.class));
+        ConstraintViolationException ex = new ConstraintViolationException("constraint failed", violations);
 
         ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleConstraintViolation(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
         assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.INVALID_INPUT.getCode());
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo(ErrorCode.INVALID_INPUT.getCode());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.INFO);
-        assertThat(event.getFormattedMessage()).contains("validation.constraint.violation");
+        assertThat(event.getFormattedMessage()).contains("violations=2");
     }
 
     @Test
-    @DisplayName("AuthenticationException은 INFO 레벨 + MDC UNAUTHORIZED 주입 (빈번한 정상 분기)")
-    void AuthenticationException은_INFO_레벨_MDC_UNAUTHORIZED() {
+    @DisplayName("AuthenticationException(BadCredentials)은 INFO 레벨 + 응답 UNAUTHORIZED")
+    void AuthenticationException_BadCredentials은_INFO_레벨() {
         BadCredentialsException ex = new BadCredentialsException("invalid");
 
         ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleAuthentication(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(ErrorCode.UNAUTHORIZED.getStatus());
         assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.UNAUTHORIZED.getCode());
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo(ErrorCode.UNAUTHORIZED.getCode());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.INFO);
         assertThat(event.getFormattedMessage()).contains("authentication.failed");
+        assertThat(event.getFormattedMessage()).contains("BadCredentialsException");
     }
 
     @Test
-    @DisplayName("AccessDeniedException은 WARN 레벨 + MDC AUTH_FORBIDDEN (보안 추적 가치)")
-    void AccessDeniedException은_WARN_레벨_MDC_AUTH_FORBIDDEN() {
+    @DisplayName("AuthenticationException 하위 타입(InsufficientAuthentication)도 동일 INFO 처리 + 타입명 로그")
+    void AuthenticationException_InsufficientAuthentication도_INFO_타입명_로그() {
+        InsufficientAuthenticationException ex = new InsufficientAuthenticationException("auth required");
+
+        ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleAuthentication(ex, request);
+
+        assertThat(response.getStatusCode()).isEqualTo(ErrorCode.UNAUTHORIZED.getStatus());
+
+        ILoggingEvent event = singleEvent();
+        assertThat(event.getLevel()).isEqualTo(Level.INFO);
+        assertThat(event.getFormattedMessage()).contains("InsufficientAuthenticationException");
+    }
+
+    @Test
+    @DisplayName("AccessDeniedException은 WARN 레벨 + 응답 AUTH_FORBIDDEN")
+    void AccessDeniedException은_WARN_레벨_응답_AUTH_FORBIDDEN() {
         AccessDeniedException ex = new AccessDeniedException("forbidden");
 
         ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleAccessDenied(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(ErrorCode.AUTH_FORBIDDEN.getStatus());
         assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.AUTH_FORBIDDEN.getCode());
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo(ErrorCode.AUTH_FORBIDDEN.getCode());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.WARN);
@@ -143,14 +180,15 @@ class GlobalExceptionHandlerTest {
     }
 
     @Test
-    @DisplayName("MaxUploadSizeExceededException은 INFO 레벨 + MDC PAYLOAD_TOO_LARGE")
-    void MaxUploadSizeExceededException은_INFO_레벨_MDC_PAYLOAD_TOO_LARGE() {
+    @DisplayName("MaxUploadSizeExceededException은 INFO 레벨 + ErrorResponse 포맷으로 통일 + PAYLOAD_TOO_LARGE 응답")
+    void MaxUploadSizeExceededException은_INFO_레벨_ErrorResponse_포맷_PAYLOAD_TOO_LARGE() {
         MaxUploadSizeExceededException ex = new MaxUploadSizeExceededException(10_000_000L);
 
-        ResponseEntity<Map<String, String>> response = handler.handleMaxSizeException(ex);
+        ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleMaxSizeException(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.PAYLOAD_TOO_LARGE);
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo("PAYLOAD_TOO_LARGE");
+        assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.PAYLOAD_TOO_LARGE.getCode());
+        assertThat(response.getBody().getMessage()).isEqualTo(ErrorCode.PAYLOAD_TOO_LARGE.getMessage());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.INFO);
@@ -158,34 +196,36 @@ class GlobalExceptionHandlerTest {
     }
 
     @Test
-    @DisplayName("fallback Exception은 ERROR 레벨 + stack trace 포함 + MDC INTERNAL_ERROR")
-    void fallback_Exception은_ERROR_레벨_stack_포함_MDC_INTERNAL_ERROR() {
+    @DisplayName("fallback Exception은 ERROR 레벨 + stack trace 포함 + INTERNAL_ERROR 응답")
+    void fallback_Exception은_ERROR_레벨_stack_포함_INTERNAL_ERROR() {
         NullPointerException ex = new NullPointerException("boom");
 
         ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleUnknown(ex, request);
 
         assertThat(response.getStatusCode()).isEqualTo(HttpStatus.INTERNAL_SERVER_ERROR);
-        assertThat(response.getBody().getCode()).isEqualTo(GlobalExceptionHandler.INTERNAL_ERROR_CODE);
-        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isEqualTo(GlobalExceptionHandler.INTERNAL_ERROR_CODE);
+        assertThat(response.getBody().getCode()).isEqualTo(ErrorCode.INTERNAL_ERROR.getCode());
 
         ILoggingEvent event = singleEvent();
         assertThat(event.getLevel()).isEqualTo(Level.ERROR);
-        assertThat(event.getThrowableProxy())
-                .as("fallback은 stack trace 포함")
-                .isNotNull();
+        assertThat(event.getThrowableProxy()).as("fallback은 stack trace 포함").isNotNull();
         assertThat(event.getThrowableProxy().getClassName()).isEqualTo(NullPointerException.class.getName());
         assertThat(event.getFormattedMessage()).contains("unexpected.exception");
     }
 
     @Test
-    @DisplayName("BusinessException의 ex.getMessage()는 응답 body의 message에 사용된다 (detail 보존)")
-    void BusinessException_message는_응답_body에_사용된다() {
-        BusinessException ex = BusinessException.withDetail(ErrorCode.CARD_NOT_FOUND, "id=42");
+    @DisplayName("모든 핸들러는 try-finally로 MDC.errorCode를 즉시 정리한다 (비-HTTP 경로 누수 차단)")
+    void 모든_핸들러는_try_finally로_MDC_errorCode를_즉시_정리한다() {
+        handler.handleBusiness(new BusinessException(ErrorCode.CARD_NOT_FOUND), request);
+        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isNull();
 
-        ResponseEntity<GlobalExceptionHandler.ErrorResponse> response = handler.handleBusiness(ex, request);
+        handler.handleAccessDenied(new AccessDeniedException("x"), request);
+        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isNull();
 
-        assertThat(response.getBody().getMessage()).contains(ErrorCode.CARD_NOT_FOUND.getMessage());
-        assertThat(response.getBody().getMessage()).contains("id=42");
+        handler.handleAuthentication(new BadCredentialsException("x"), request);
+        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isNull();
+
+        handler.handleUnknown(new NullPointerException("x"), request);
+        assertThat(MDC.get(GlobalExceptionHandler.MDC_ERROR_CODE)).isNull();
     }
 
     private ILoggingEvent singleEvent() {
